--- a/addon/locale/zh/LC_MESSAGES/nvda.po
+++ b/addon/locale/zh/LC_MESSAGES/nvda.po
@@ -64,6 +64,195 @@ msgid "Invalid calculation mode"
 msgstr "无效的计算模式"
 
 # conversion.py
+msgid "Time"
+msgstr "时间"
+
+msgid "Select a Time conversion:"
+msgstr "选择一个时间转换:"
+
+msgid "Time Conversion Options"
+msgstr "时间转换选项"
+
+msgid "Masehi to Hijri"
+msgstr "公历转伊斯兰历"
+
+msgid "Hijri to Masehi"
+msgstr "伊斯兰历转公历"
+
+msgid "Input in Masehi. Example 01012025"
+msgstr "请输入公历日期。示例 01012025"
+
+msgid "Input in Hijri. Example 01012025"
+msgstr "请输入伊斯兰历日期。示例 01012025"
+
+msgid "Seconds to Minutes"
+msgstr "秒转分钟"
+
+msgid "Minutes to Hours"
+msgstr "分钟转小时"
+
+msgid "Hours to Days"
+msgstr "小时转天"
+
+msgid "Days to Weeks"
+msgstr "天转周"
+
+msgid "Weeks to Months"
+msgstr "周转月"
+
+msgid "Months to Years"
+msgstr "月转年"
+
+msgid "Input in Seconds:"
+msgstr "请输入秒数:"
+
+msgid "Input in Minutes:"
+msgstr "请输入分钟数:"
+
+msgid "Input in Hours:"
+msgstr "请输入小时数:"
+
+msgid "Input in Days:"
+msgstr "请输入天数:"
+
+msgid "Input in Weeks:"
+msgstr "请输入周数:"
+
+msgid "Input in Months:"
+msgstr "请输入月数:"
+
+msgid "Kilometers per Hour to Miles per Hour"
+msgstr "千米每小时转英里每小时"
+
+msgid "Miles per Hour to Kilometers per Hour"
+msgstr "英里每小时转千米每小时"
+
+msgid "Meters per Second to Kilometers per Hour"
+msgstr "米每秒转千米每小时"
+
+msgid "Kilometers per Hour to Meters per Second"
+msgstr "千米每小时转米每秒"
+
+msgid "Meters per Second to Miles per Hour"
+msgstr "米每秒转英里每小时"
+
+msgid "Miles per Hour to Meters per Second"
+msgstr "英里每小时转米每秒"
+
+msgid "Knots to Kilometers per Hour"
+msgstr "节转千米每小时"
+
+msgid "Kilometers per Hour to Knots"
+msgstr "千米每小时转节"
+
+msgid "Knots to Miles per Hour"
+msgstr "节转英里每小时"
+
+msgid "Miles per Hour to Knots"
+msgstr "英里每小时转节"
+
+msgid "Feet per Second to Kilometers per Hour"
+msgstr "英尺每秒转千米每小时"
+
+msgid "Kilometers per Hour to Feet per Second"
+msgstr "千米每小时转英尺每秒"
+
+msgid "Kilometers to Miles"
+msgstr "千米转英里"
+
+msgid "Miles to Kilometers"
+msgstr "英里转千米"
+
+msgid "Meters to Feet"
+msgstr "米转英尺"
+
+msgid "Feet to Meters"
+msgstr "英尺转米"
+
+msgid "Centimeters to Inches"
+msgstr "厘米转英寸"
+
+msgid "Inches to Centimeters"
+msgstr "英寸转厘米"
+
+msgid "Kilograms to Pounds"
+msgstr "千克转磅"
+
+msgid "Pounds to Kilograms"
+msgstr "磅转千克"
+
+msgid "Tons to Kilograms"
+msgstr "吨转千克"
+
+msgid "Kilograms to Tons"
+msgstr "千克转吨"
+
+msgid "Ounces to Grams"
+msgstr "盎司转克"
+
+msgid "Grams to Ounces"
+msgstr "克转盎司"
+
+msgid "Liter to Gallon (US)"
+msgstr "升转加仑（美制）"
+
+msgid "Gallon (US) to Liter"
+msgstr "加仑（美制）转升"
+
+msgid "Liter to Milliliter"
+msgstr "升转毫升"
+
+msgid "Milliliter to Liter"
+msgstr "毫升转升"
+
+msgid "Cubic Meter to Liter"
+msgstr "立方米转升"
+
+msgid "Liter to Cubic Meter"
+msgstr "升转立方米"
+
+msgid "Gallon (UK) to Liter"
+msgstr "加仑（英制）转升"
+
+msgid "Liter to Gallon (UK)"
+msgstr "升转加仑（英制）"
+
+msgid "Cubic Inch to Liter"
+msgstr "立方英寸转升"
+
+msgid "Liter to Cubic Inch"
+msgstr "升转立方英寸"
+
+msgid "Milliliter to Cubic Centimeter"
+msgstr "毫升转立方厘米"
+
+msgid "Cubic Centimeter to Milliliter"
+msgstr "立方厘米转毫升"
+
+msgid "Barrel (US) to Liter"
+msgstr "桶（美制）转升"
+
+msgid "Liter to Barrel (US)"
+msgstr "升转桶（美制）"
+
+msgid "Celsius to Fahrenheit"
+msgstr "摄氏度转华氏度"
+
+msgid "Fahrenheit to Celsius"
+msgstr "华氏度转摄氏度"
+
+msgid "Celsius to Kelvin"
+msgstr "摄氏度转开尔文"
+
+msgid "Kelvin to Celsius"
+msgstr "开尔文转摄氏度"
+
+msgid "Fahrenheit to Kelvin"
+msgstr "华氏度转开尔文"
+
+msgid "Kelvin to Fahrenheit"
+msgstr "开尔文转华氏度"
+
 msgid "Please Select Conversion Mode"
 msgstr "请选择转换模式"
 
@@ -209,6 +398,75 @@ msgid "Invalid input, only numbers allowed"
 msgstr "无效输入，仅允许数字"
 
 # scientific.py
+msgid "Use Radians"
+msgstr "使用弧度"
+
+msgid "Asin"
+msgstr "反正弦"
+
+msgid "Acos"
+msgstr "反余弦"
+
+msgid "Tan"
+msgstr "正切"
+
+msgid "Atan"
+msgstr "反正切"
+
+msgid "Radian"
+msgstr "弧度"
+
+msgid "Degree"
+msgstr "度"
+
+msgid "Natural Base"
+msgstr "自然对数底"
+
+msgid "Base 10"
+msgstr "十进制底"
+
+msgid "Radians"
+msgstr "弧度"
+
+msgid "Degrees"
+msgstr "度数"
+
+msgid "Calculation mode set to Sin (Input in "
+msgstr "计算模式设为正弦（输入为"
+
+msgid "Calculation mode set to Cos (Input in "
+msgstr "计算模式设为余弦（输入为"
+
+msgid "Input in Range [-1, 1] ({mode}):"
+msgstr "输入范围 [-1, 1] ({mode}):"
+
+msgid "Calculation mode set to Asin"
+msgstr "计算模式设为反正弦"
+
+msgid "Calculation mode set to Acos"
+msgstr "计算模式设为反余弦"
+
+msgid "Input in {mode}:"
+msgstr "输入 {mode}:"
+
+msgid "Calculation mode set to Tan"
+msgstr "计算模式设为正切"
+
+msgid "Input in Any Real Number ({mode}):"
+msgstr "输入任意实数 ({mode}):"
+
+msgid "Calculation mode set to Atan"
+msgstr "计算模式设为反正切"
+
+msgid "Arcsine is only defined for values between -1 and 1"
+msgstr "反正弦仅对 -1 和 1 之间的值有效"
+
+msgid "Arccosine is only defined for values between -1 and 1"
+msgstr "反余弦仅对 -1 和 1 之间的值有效"
+
+msgid "Invalid input, only valid numbers are allowed"
+msgstr "无效输入，只允许有效数字"
+
 msgid "Please Select Scientific Mode "
 msgstr "请选择科学模式"
 
@@ -300,33 +558,64 @@ msgstr "计算模式帮助"
 
 msgid ""
 "Standard Mode:\n"
-"计算遵循标准数学运算符优先级规则（PEMDAS）。\n"
-"示例：3 + 5 * 2 = 13（先执行乘法）。\n"
+"Calculations follow the standard mathematical operator precedence rules "
+"(PEMDAS).\n"
+"Example: 3 + 5 * 2 = 13 (multiplication is performed first).\n"
 "\n"
 "Left to Right Mode:\n"
-"计算从左到右执行，不考虑运算符优先级。\n"
-"示例：3 + 5 * 2 = 16（计算按从左到右的顺序执行）。\n"
+"Calculations are performed from left to right without considering operator "
+"precedence.\n"
+"Example: 3 + 5 * 2 = 16 (calculations are done left to right).\n"
 "\n"
 "Scientific Mode:\n"
 "\n"
-"Sin and Cos:\n"
-"计算正弦和余弦的值。\n"
-"输入必须为度数。计算器将自动将值转换为弧度进行计算。\n"
+"Sin, Cos, and Inverse Trigonometric Functions (Sin^-1, Cos^-1, Tan^-1):\n"
+"Calculates the values of sine, cosine, inverse sine (asin), inverse cosine "
+"(acos), tangent (tan), and inverse tangent (atan).\n"
+"These functions can accept input in degrees or radians. To switch between "
+"them, use the checkbox for 'Use Radians'. The default is degrees.\n"
 "\n"
 "Logarithms:\n"
+"Two types of logarithms are available:\n"
+"- Natural Logarithm (LN): Logarithm with the natural base (e).\n"
+"- Base 10 Logarithm: Logarithm with base 10.\n"
+"Negative numbers are not supported as logarithms are only defined for "
+"positive numbers.\n"
+"\n"
+"Square Root:\n"
+"Calculates the square root of a number.\n"
+"Negative numbers are not supported as the square root is only defined for "
+"non-negative numbers.\n"
+"\n"
+"Result Format:\n"
+"- High Precision: Displays the result with full detail.\n"
+"- Rounded (2 Decimal Places): Displays the result in a simpler form, rounded "
+"to 2 decimal places for easier reading."
+msgstr ""
+"标准模式：\n"
+"计算遵循标准的数学运算符优先级规则（PEMDAS）。\n"
+"示例：3 + 5 * 2 = 13（先进行乘法运算）。\n"
+"\n"
+"从左到右模式：\n"
+"计算按从左到右的顺序执行，不考虑运算符优先级。\n"
+"示例：3 + 5 * 2 = 16（从左到右进行计算）。\n"
+"\n"
+"科学模式：\n"
+"\n"
+"正弦、余弦和反三角函数（反正弦Sin^-1，反余弦Cos^-1，反正切Tan^-1）：\n"
+"计算正弦、余弦、反正弦（asin）、反余弦（acos）、正切（tan）和反正切（atan）的值。\n"
+"这些函数可以接受角度或弧度作为输入。要在两者之间切换，请使用'使用弧度'复选框。默认是度数。\n"
+"\n"
+"对数：\n"
 "提供两种类型的对数：\n"
 "- 自然对数（LN）：以自然底数（e）为底的对数。\n"
 "- 以10为底的对数：以10为底的对数。\n"
-"负数不被支持，因为对数仅对正数定义。\n"
+"负数不支持，因为对数仅对正数定义。\n"
 "\n"
-"Square Root:\n"
+"平方根：\n"
 "计算一个数的平方根。\n"
-"负数不被支持，因为平方根仅对非负数定义。\n"
+"负数不支持，因为平方根仅对非负数定义。\n"
 "\n"
-"Result Format:\n"
-"- 高精度：显示结果的完整细节。\n"
-"- 四舍五入（2位小数）：以简化形式显示结果，四舍五入到2位小数，便于阅读。"
-msgstr ""
-
-msgid "OK"
-msgstr "确定"
+"结果格式：\n"
+"- 高精度：显示详细结果。\n"
+"- 四舍五入（2位小数）：以更简洁的形式显示结果，四舍五入到2位小数，便于阅读。"
